@@ -30,6 +30,7 @@ Please visit http://aegisub.net to download latest version
 - Fixed bug related to tag cycling, which would reset grid, move video and force a refresh of everything (slow, and could undo uncommited changes) (AMZ)
 - Fixed some bugs related to inserting overrides via the buttons over the edit box (AMZ)
 - Implemented Redo (AMZ)
+- Fonts collector will now default collection to same folder as script (Set to "?script" on config.dat) (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
